kubegres-postgres.yaml

 kind: StorageClass
 apiVersion:  storage.k8s.io/v1
 metadata:
   name: heketi-storage
   namespace: kubegres-system
 provisioner: kubernetes.io/glusterfs
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 allowVolumeExpansion: true
 parameters:
   resturl: "ip"
   restuser: "admin"
   restuserkey: "admin"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mypostgres
  namespace: kubegres-system
spec:
  entryPoints:
    - mypostgres
  routes:
   -  match: HostSNI(`*`)
      services:
        - name: mypostgres
          port: 5432
